# StudentManagementSystem

./: .gitignore  LICENSE  README.md  docker-compose.yml  run.sh
backend/: .dockerignore  CMakeLists.txt  Dockerfile  main.cpp
backend/config/: example.json  mysqlconfig.json  static.json
backend/controllers/: GateController.cpp  GateController.h
backend/controllers/admin/: AdminProfile.cpp  AdminProfile.h  CourseController.cpp  CourseController.h  MajorController.cpp  MajorController.h  StudentController.cpp  StudentController.h
backend/controllers/auth/: Hasher.cpp  Hasher.h  StoreCredential.cpp  StoreCredential.h
backend/controllers/handle-dashboard/: CalculateGPA.cpp  CalculateGPA.h  Dashboard.cpp  Dashboard.h
backend/db/init/: 01-users.sql  02-courses.sql  03-majors.sql  04-enrollments.sql  05-enrollmenthistory.sql  06-enrollmentdetails.sql  07-advisingnotes.sql  add_student.sql  courses.sql  createdb.sql  login.sql  users.sql
backend/tests/: newCxxTest.h
docs/: form.html  index.html
docs/admin/: admin_profile.html  dashboard.html  list_of_students.html  list_students.html  new_student.html  register.html  remove_student.html  sidebar.html  student_profile.html
docs/admin/assets/: SP_RPanel.css  SP_RPanel.js  admin.css  advising_tab.css  calendar.js  chart.js  courses_tab.css  dashboard.css  dashboard.html  new_student.css  new_student.js  remove_student.css  remove_student.js  sidebar.css  sidebar.js  student_profile.css  student_profile.js  student_table.css  student_table.js
docs/admin/assets/css/: SP_RPanel.css  admin_profile.css  advising_tab.css  course_grade_tab.css  dashboard.css  grade_tab.css  new_student.css  register.css  remove_student.css  sidebar.css  student_profile.css  student_table.css
docs/admin/assets/js/: SP_RPanel.js  admin.js  calendar.js  dashboard.js  new_student.js  probation.js  recentActivities.js  register.js  sidebar.js  studentIdSwitch.js  student_profile.js  student_table.js  total.js
docs/assets/: fetchLogin.js
docs/assets/css/: form.css  login.css
docs/assets/js/: resetPass.js
docs/student/: dashboard.html
pages/: index.html
public/: index.html
